--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,8 +105,14 @@ body {
 
 .error-message {
     color: red; 
-  }
-  
-  .error {
-    border: 1px solid red;
-  }
+}
+
+.error {
+border: 1px solid red;
+}
+
+.pagination{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
