--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,3 +122,27 @@ border: 1px solid red;
     align-items: center;
     justify-content: space-between;
 }
+
+.form_flex11 {
+    width: 95%;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+
+.general {
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    padding: 5px 8px 5px;
+    border-radius: 4px;
+    margin-bottom: 10px;
+}
+
+.form_flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.form_flex1 {
+    width: 50%;
+    margin: 10px 10px 10px;
+}
